@startuml

title __SERVICES's Class Diagram__\n

  namespace com.example.yolov2_traffic_signs {
    namespace services {
      class com.example.yolov2_traffic_signs.services.GetTrafficSigns {
          {static} - TAG : String
          - db : DatabaseReference
          + addToDatabase()
          + then()
      }
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    namespace services {
      class com.example.yolov2_traffic_signs.services.LocationService {
          {static} - TAG : String
          - currentLocation : Location
          - fusedLocationProviderClient : FusedLocationProviderClient
          - iBinder : IBinder
          - locationCallback : LocationCallback
          - locationRequest : LocationRequest
          - locationSettingsRequest : LocationSettingsRequest
          - settingsClient : SettingsClient
          + LocationService()
          + getCurrentLocation()
          + onBind()
          + onCreate()
          + onLocationChanged()
          + onProviderDisabled()
          + onProviderEnabled()
          + onStatusChanged()
          - buildLocationSettingsRequest()
          - createLocationCallback()
          - createLocationRequest()
          - getLastLocation()
          - setupLocation()
          - startLocationUpdates()
      }
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    namespace services {
      class com.example.yolov2_traffic_signs.services.LocationService.LocationBinder {
          + getService()
      }
    }
  }
  

  com.example.yolov2_traffic_signs.services.GetTrafficSigns .up.|> com.google.android.gms.tasks.Continuation
  com.example.yolov2_traffic_signs.services.LocationService .up.|> android.location.LocationListener
  com.example.yolov2_traffic_signs.services.LocationService -up-|> android.app.Service
  com.example.yolov2_traffic_signs.services.LocationService +-down- com.example.yolov2_traffic_signs.services.LocationService.LocationBinder
  com.example.yolov2_traffic_signs.services.LocationService.LocationBinder -up-|> android.os.Binder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
